# clauto

./: README.md
learning_ucm_axl/: .env-template  .gitignore  README.md  pyproject.toml
learning_ucm_axl/SAMPLE XML Responses/: getPhone.xml
learning_ucm_axl/aiohttp_sample/: list_phones.py
learning_ucm_axl/requests_sample/: helpers.py  list_phones.py
learning_ucm_axl/zeep_sample/: add_css.py  add_dn.py  add_partition.py  add_phone.py  add_pt_to_css.py  add_user.py  big_sample.py  create_css.py  get_phone_details.py  list_css_zeep.py  list_partition.py  list_phones.py  overwrite_pt_to_css.py  rem_pt_from_css.py  remove_css.py  remove_dn.py  remove_partition.py  remove_phone.py  remove_user.py  update_phone.py
learning_ucm_axl/zeep_sample_async/: list_phones.py
resources/: README.md
webex_js/: .gitignore  README.md  webex-teams_auth.html
webex_py/: .gitignore  README.md  chatops.py  list_rooms.py  post_message.py  post_message2.py  pyproject.toml  sdk-challenge.py  sdk-notebook.ipynb
