[tool.poetry]
name = "ucm_axl"
version = "0.1.0"
description = "Misc Learning for UCM AXL"
authors = ["denis <git@dpnet.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
zeep = {extras = ["async"], version = "^3.4.0"}
python-dotenv = "^0.13.0"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^19.10b0"
mypy = "^0.781"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
